--- a/firebase.json
+++ b/firebase.json
@@ -21,12 +21,28 @@
     "rewrites": [
       {
         "source": "/api/**",
-        "destination": "http://54.177.14.82:8000/:splat"
+        "function": "apiProxy"
       },
       {
         "source": "**",
         "destination": "/index.html"
       }
     ]
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
 }
