--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@babel/core": "^7.26.10",
     "@babel/types": "^7.27.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@firebase/app": "^0.11.2",
     "@firebase/auth": "^1.9.1",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.0.1",
     "@supabase/supabase-js": "^2.39.7",
     "firebase": "^11.5.0",
     "lucide-react": "^0.344.0",
